2009-04-25  Thomas Heller  <theller@python.net>

	* SAFEARRAYs can now also be created from multi-dimensional numpy
	arrays.

2009-04-23  Thomas Heller  <theller@python.net>

	* Change version number in repository to 0.6.0.1dev.

	* SAFEARRAYs can now also be created from array.array objects, and
	from (one-dimensional) numpy arrays.  This is a lot faster than
	creating them from Python lists or tuples, at least for large
	arrays.

	* ctypes instances like c_int, c_ubyte, and so on can now be
	assigned to VARIANT().value.  This allows to force creation of
	VARIANTs with the corresponding typecodes V_I4, VT_UI1 and alike.

	* Accept typelibs that contain SAFEARRAY(char).

2009-03-17  Thomas Heller  <theller@python.net>

	* Fixed the return type of ITypeLib::ReleaseTLibAttr, which is
	documented wrongly in MSDN.  The return type is void, not HRESULT.
	Reported to cause crashes on Windows 7.

2009-01-29  Thomas Heller  <theller@python.net>

	* Restore compatibility with Python 2.3.
	
	* comtypes\client\_code_cache.py: Add missing 'import types' in
	comtypes\client\_code_cache.py.

2008-12-19  Thomas Heller  <theller@python.net>

	* Bumped version number to 0.6.0.

	* comtypes.client.lazybind.Dipatch:
	If __getitem__ fails the get the indexed default value, try
	NewENUM.  Implement __eq__ for Python 3 compatibility.

	* Fix a problem with SAFEARRAYs where the contained data was
	released too early.

	* Fix property get handling for FUNC_PUREVIRTUAL functions in
	lazybind.py

2008-12-18  Thomas Heller  <theller@python.net>

	* Fix memoryleak in IEnumVARIANT.

2008-12-12  Thomas Heller  <theller@python.net>
	
	* Merged changes from the dyndispatch branch:

	    * Add a comtypes.client.Constants class that provides a way to
	    access constants in the type library for an object, even when
	    no wrapper has been created for the type library.  The
	    contants can be accessed as attributes like this, assuming