@@ -15,12 +15,8 @@ REGCLS_SUSPENDED      = 4  # register it as suspended, will be activated
 REGCLS_SURROGATE      = 8  # must be used when a surrogate process
 
 def run(classes):
-    assert len(classes) == 1
-    cls = classes[0]
-    factory = ClassFactory(cls)
-    factory._run()
-
-g_cLocks = 0 # XXX We should use Interlocked access
+    classobjects = [ClassFactory(cls) for cls in classes]
+    comtypes.COMObject.__run_localserver__(classobjects)
 
 class ClassFactory(comtypes.COMObject):
     _com_interfaces_ = [IClassFactory]
@@ -30,11 +26,16 @@ class ClassFactory(comtypes.COMObject):
 
     def __init__(self, cls, *args, **kw):
         super(ClassFactory, self).__init__()
-        cls._factory = self
         self._cls = cls
         self._register_class()
         self._args = args
         self._kw = kw
+
+    def IUnknown_AddRef(self, this):
+        return 2
+
+    def IUnknown_Release(self, this):
+        return 1
 
     def _register_class(self):
         regcls = getattr(self._cls, "_regcls_", self.regcls)
@@ -50,50 +51,18 @@ class ClassFactory(comtypes.COMObject):
         self.cookie = cookie
 
     def _revoke_class(self):
-        oledll.ole32.CoRevokeClassObject(self,cookie)
+        oledll.ole32.CoRevokeClassObject(self.cookie)
 
     def CreateInstance(self, this, punkOuter, riid, ppv):
         _debug("ClassFactory.CreateInstance(%s)", riid[0])
-        self.LockServer(None, True)
         obj = self._cls(*self._args, **self._kw)
         result = obj.IUnknown_QueryInterface(None, riid, ppv)
         _debug("CreateInstance() -> %s", result)
         return result
 
     def LockServer(self, this, fLock):
-        global g_cLocks
         if fLock:
-            g_cLocks += 1
+            comtypes.COMObject.__server__.Lock()
         else:
-            g_cLocks -= 1
-        _debug("LockServer -> %d", g_cLocks)
-        if g_cLocks == 0:
-            if self._queue is not None:
-                self._queue.put(42)
-            else:
-                windll.user32.PostQuitMessage(0)
+            comtypes.COMObject.__server__.Unlock()
         return S_OK
-
-    def _run(self):
-        result = windll.ole32.CoInitialize(None)
-        if RPC_E_CHANGED_MODE == result:
-            # we're running in MTA: no message pump needed
-            _debug("Server running in MTA")
-            self.run_mta()
-        else:
-            # we're running in STA: need a message pump
-            _debug("Server running in STA")
-            if result >= 0:
-                # we need a matching CoUninitialize() call for a successful CoInitialize().
-                windll.ole32.CoUninitialize()
-            self.run_sta()
-
-    def run_sta(self):
-        "Can be overridden in subclasses, to install a custom message pump."
-        from comtypes import messageloop
-        messageloop.run()
-
-    def run_mta(self):
-        "Can be overridden in subclasses."
-        self._queue = Queue.Queue()
-        self._queue.get()
